--- a/src/utils/xrMiscMath/CMakeLists.txt
+++ b/src/utils/xrMiscMath/CMakeLists.txt
@@ -1,7 +1,7 @@
-project(xrQSlim)
+project(xrMiscMath)
 
 list(APPEND DIRS
-    "src"
+    "."
     )
 
 add_dir("${DIRS}")
@@ -15,5 +15,8 @@ include_directories(
 #list(REMOVE_ITEM ${PROJECT_NAME}__SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/./LevelCompilerLoggerWindow.cpp")
 #ist(REMOVE_ITEM ${PROJECT_NAME}__INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/./LevelCompilerLoggerWindow.hpp")
 
-add_definitions(-DXR_QSLIM_EXPORTS)
 add_library(${PROJECT_NAME} STATIC ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
+set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "pch.hpp")
+cotire(${PROJECT_NAME})
