--- a/Externals/CMakeLists.txt
+++ b/Externals/CMakeLists.txt
@@ -1,8 +1,9 @@
 include(luajit.cmake)
 add_subdirectory(luabind)
-add_subdirectory(lzo)
+xr_install_file(luabind)
 add_subdirectory(cximage)
-add_subdirectory(NVTT)
+#add_subdirectory(lzo)
+#add_subdirectory(NVTT)
 add_subdirectory(OPCODE)
 add_subdirectory(ode)
 #add_subdirectory(pugixml)
