Для сборки Mixed

--- a/src/Layers/xrRenderPC_R2/xrRender_R2.vcxproj
+++ b/src/Layers/xrRenderPC_R2/xrRender_R2.vcxproj
@@ -246,6 +246,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(xrExternals)OpenAutomate\inc;$(xrExternals)nvapi;$(xrExternals)AGS_SDK;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_USRDLL;XRRENDER_R2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalOptions>/Zm200 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>d3d9.lib;nvapi64.lib;amd_ags_$(PlatformShortName).lib;d3dcompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
