--- a/src/Layers/xrRenderPC_R1/xrRender_R1.vcxproj.filters
+++ b/src/Layers/xrRenderPC_R1/xrRender_R1.vcxproj.filters
@@ -972,4 +972,7 @@
   <ItemGroup>
     <Text Include="Pipeline.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\TypeHelper.natvis" />
+  </ItemGroup>
 </Project>
