Адаптация Lua(экспериментальная)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Externals/LuaJIT"]
 	path = Externals/LuaJIT
-	url = https://github.com/qweasdd136963/LuaJIT.git
+	url = https://github.com/Roman-n/LuaJIT.git
 [submodule "Externals/luabind"]
 	path = Externals/luabind
 	url = https://github.com/qweasdd136963/luabind-deboostified.git
