--- a/src/xrScriptEngine/xrScriptEngine.vcxproj.filters
+++ b/src/xrScriptEngine/xrScriptEngine.vcxproj.filters
@@ -159,4 +159,7 @@
       <Filter>Engine</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\TypeHelper.natvis" />
+  </ItemGroup>
 </Project>
