Removed old LuaJIT project from solution and all references.

--- a/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj.filters
+++ b/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj.filters
@@ -1113,4 +1113,7 @@
       <Filter>Interface implementations\MSAARender</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\..\TypeHelper.natvis" />
+  </ItemGroup>
 </Project>
