Added LuaJIT 2.1 project.

--- a/Externals/lua-extensions/lua_extensions.vcxproj
+++ b/Externals/lua-extensions/lua_extensions.vcxproj
@@ -573,6 +573,11 @@
     <ClInclude Include="lmarshal.h" />
     <ClInclude Include="script_additional_libs.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LuaJIT-proj\LuaJIT.vcxproj">
+      <Project>{632aeeb6-dc06-4e15-9551-b2b09a4b73c5}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
