--- a/Externals/luabind.vcxproj
+++ b/Externals/luabind.vcxproj
@@ -207,6 +207,11 @@
     <ClInclude Include="luabind\luabind\wrapper_base.hpp" />
     <ClInclude Include="luabind\luabind\yield_policy.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="LuaJIT-proj\LuaJIT.vcxproj">
+      <Project>{632aeeb6-dc06-4e15-9551-b2b09a4b73c5}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
