--- a/src/xrScriptEngine/xrScriptEngine.vcxproj
+++ b/src/xrScriptEngine/xrScriptEngine.vcxproj
@@ -282,6 +282,9 @@
     <ProjectReference Include="..\..\Externals\lua-extensions\lua_extensions.vcxproj">
       <Project>{44f716e7-05bd-4390-ab02-5f7daf7fefde}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Externals\LuaJIT-proj\LuaJIT.vcxproj">
+      <Project>{632aeeb6-dc06-4e15-9551-b2b09a4b73c5}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
