Use standart X-Ray allocator instead of tbb one.

--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -680,6 +680,12 @@
     <ClInclude Include="FileCRC32.h">
       <Filter>FS</Filter>
     </ClInclude>
+    <ClInclude Include="Memory\xalloc.h">
+      <Filter>Memory</Filter>
+    </ClInclude>
+    <ClInclude Include="Memory\XRayAllocator.h">
+      <Filter>Memory</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="xrCore.rc">
